--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,13 +1,29 @@
-<div class="mt-4">
+<form class="mt-4" name="container-form" method="POST" action="/courses/handle-form-actions">
   <div>
     <h3>Khóa học của tôi</h3>
     <a href="/me/trash/courses">Thùng rác ({{deletedCount}})</a>
+
+    <div class="d-flex mt-4 align-items-center">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
+        <label class="form-check-label" for="checkbox-all">
+          Chọn tất cả
+        </label>
+      </div>
+
+      <select class="form-control form-control-sm checkbox-select-all-options" name="action" required="required">
+        <option value="">-- Hành động --</option>
+        <option value="delete">Xóa</option>
+      </select>
+
+      <button class="btn btn-primary btn-sm check-all-submit-btn" disabled="disabled">Thực hiện</button>
+    </div>
   </div>
 
   <table class="table mt-4">
     <thead>
       <tr>
-        <th scope="col">#</th>
+        <th scope="col" colspan="2">#</th>
         <th scope="col">Tên khóa học</th>
         <th scope="col">Trình độ</th>
         <th scope="col" colspan="2">Thời gian tạo</th>
@@ -16,6 +32,11 @@
     <tbody>
       {{#each courses}}
         <tr>
+          <td>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}">
+            </div>
+          </td>
           <th scope="row">{{sum @index 1}}</th>
           <td>{{this.name}}</td>
           <td>{{this.level}}</td>
@@ -42,7 +63,7 @@
       {{/each}}
     </tbody>
   </table>
-</div>
+</form>
 
 {{! Confirm DELETE course }}
 <div
@@ -82,22 +103,60 @@
 <form name="delete-course-form" method="POST"></form>
 
 <script>
-  var courseId; var deleteForm = document.forms['delete-course-form']; 
-  // When dialog confirm 
-  const exampleModal = document.getElementById('delete-course-modal');
-  if (exampleModal) {
-    exampleModal.addEventListener('show.bs.modal', event => { 
-      const modalBodyInput = exampleModal.querySelector('.modal-body p');
-      const button = event.relatedTarget; 
-      const id = button.getAttribute('data-id'); 
-      courseId = id;
-      const title = button.getAttribute('data-bs-title'); 
-      modalBodyInput.innerText = 'Bạn chắc chắn muốn xóa khóa học "' + title + '" ?';
-    }) 
-  } // When delete course btn clicked 
-  var btnDeleteCourse = document.getElementById('btn-delete-course'); 
-  btnDeleteCourse.onclick = () => { 
-    deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
-    deleteForm.submit(); 
-  }
+  document.addEventListener("DOMContentLoaded", function() {
+    var courseId; 
+    var deleteForm = document.forms['delete-course-form']; 
+    // var containerForm = document.forms['container-form']; 
+    var containerForm = $('form[name="container-form"]');
+    var btnDeleteCourse = document.getElementById('btn-delete-course'); 
+    var checkboxAll = $('#checkbox-all');
+    var courseItemCheckbox = $('input[name="courseIds[]"]');
+    var checkAllSubmitBtn = $('.check-all-submit-btn');
+    
+    // When dialog confirm 
+    const exampleModal = document.getElementById('delete-course-modal');
+    if (exampleModal) {
+      exampleModal.addEventListener('show.bs.modal', event => { 
+        const modalBodyInput = exampleModal.querySelector('.modal-body p');
+        const button = event.relatedTarget; 
+        const id = button.getAttribute('data-id'); 
+        courseId = id;
+        const title = button.getAttribute('data-bs-title'); 
+        modalBodyInput.innerText = 'Bạn chắc chắn muốn xóa khóa học "' + title + '" ?';
+      }) 
+    } 
+
+    // When delete course btn clicked 
+    btnDeleteCourse.onclick = () => { 
+      deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
+      deleteForm.submit(); 
+    }
+
+    // When checkbox all clicked
+    checkboxAll.change(function () {
+      var isCheckedAll = $(this).prop('checked');
+      courseItemCheckbox.prop('checked', isCheckedAll);
+      renderCheckAllSubmitBtn();
+    })
+
+    // course item checkbox changed 
+    courseItemCheckbox.change(function () {
+      var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length;
+      
+      checkboxAll.prop('checked', isCheckedAll);
+      renderCheckAllSubmitBtn();
+    })
+
+    // Re-render check all submit button
+    function renderCheckAllSubmitBtn() {
+      var checkedCount = $('input[name="courseIds[]"]:checked').length;
+      if (checkedCount > 0) {
+        checkAllSubmitBtn.prop('disabled', false);
+      } else {
+        checkAllSubmitBtn.prop('disabled', true);
+      }
+    }
+
+
+  })
 </script>
