--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -1,13 +1,30 @@
-<div class="mt-4">
+<form name="container-form" method="POST" action="/courses/handle-form-actions" class="mt-4">
   <div>
     <a href="/me/stored/courses">Danh sách khóa học</a>
     <h3>Khóa học đã xóa</h3>
+
+    <div class="d-flex mt-4 align-items-center">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
+        <label class="form-check-label" for="checkbox-all">
+          Chọn tất cả
+        </label>
+      </div>
+
+      <select class="form-control form-control-sm checkbox-select-all-options" name="action" required="required">
+        <option value="">-- Hành động --</option>
+        <option value="restore">Khôi phục</option>
+        <option value="deleteForce">Xóa vĩnh viễn</option>
+      </select>
+
+      <button class="btn btn-primary btn-sm check-all-submit-btn" disabled="disabled">Thực hiện</button>
+    </div>
   </div>
 
   <table class="table mt-4">
     <thead>
       <tr>
-        <th scope="col">#</th>
+        <th scope="col" colspan="2">#</th>
         <th scope="col">Tên khóa học</th>
         <th scope="col">Trình độ</th>
         <th scope="col" colspan="2">Thời gian xóa</th>
@@ -16,6 +33,11 @@
     <tbody>
       {{#each courses}}
         <tr>
+          <td>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}">
+            </div>
+          </td>
           <th scope="row">{{sum @index 1}}</th>
           <td>{{this.name}}</td>
           <td>{{this.level}}</td>
@@ -41,7 +63,7 @@
       {{/each}}
     </tbody>
   </table>
-</div>
+</form>
 
 {{! Confirm DELETE course }}
 <div
@@ -85,8 +107,12 @@
   document.addEventListener("DOMContentLoaded", function() {
     var courseId; 
     var deleteForm = document.forms['delete-course-form'];
+    var containerForm = $('form[name="container-form"]');
     var restoreForm = document.forms['restore-course-form'];
     var restoreBtn = $('.btn-restore');
+    var checkboxAll = $('#checkbox-all');
+    var courseItemCheckbox = $('input[name="courseIds[]"]');
+    var checkAllSubmitBtn = $('.check-all-submit-btn');
 
      // When dialog confirm 
     const exampleModal = document.getElementById('delete-course-modal') 
@@ -107,6 +133,7 @@
       deleteForm.submit();
     }
 
+    // When restore btn clicked
     restoreBtn.click(function (e) {
       e.preventDefault();
 
@@ -114,6 +141,31 @@
       restoreForm.action = '/courses/' + courseId + '/restore?_method=PATCH';
       restoreForm.submit();
     })
+
+    // When checkbox all clicked
+    checkboxAll.change(function() {
+      var isCheckedAll = $(this).prop('checked');
+      courseItemCheckbox.prop('checked', isCheckedAll);
+      renderCheckAllSubmitBtn();
+    })
+
+    // course item checkbox changed 
+    courseItemCheckbox.change(function () {
+      var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length;
+      
+      checkboxAll.prop('checked', isCheckedAll);
+      renderCheckAllSubmitBtn();
+    })
+
+    // Re-render check all submit button
+    function renderCheckAllSubmitBtn() {
+      var checkedCount = $('input[name="courseIds[]"]:checked').length;
+      if (checkedCount > 0) {
+        checkAllSubmitBtn.prop('disabled', false);
+      } else {
+        checkAllSubmitBtn.prop('disabled', true);
+      }
+    }
 
   })
 </script>
